--- a/cpe-x.config
+++ b/cpe-x.config
@@ -2571,7 +2571,7 @@ CONFIG_PACKAGE_kmod-sdhci-mt7620=y
 #
 # SPI Support
 #
-# CONFIG_PACKAGE_kmod-mmc-spi is not set
+CONFIG_PACKAGE_kmod-mmc-spi=y
 # CONFIG_PACKAGE_kmod-spi-bitbang is not set
 # CONFIG_PACKAGE_kmod-spi-dev is not set
 # CONFIG_PACKAGE_kmod-spi-gpio is not set
@@ -6381,7 +6381,7 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_mc is not set
 # CONFIG_PACKAGE_mcookie is not set
 # CONFIG_PACKAGE_micrond is not set
-# CONFIG_PACKAGE_mmc-utils is not set
+CONFIG_PACKAGE_mmc-utils=y
 # CONFIG_PACKAGE_more is not set
 # CONFIG_PACKAGE_moreutils is not set
 # CONFIG_PACKAGE_mosh-client is not set
